--- a/src/App.css
+++ b/src/App.css
@@ -3,15 +3,11 @@
 }
 
 body {
-  padding-top: 50px;
+  padding-top: 4rem;
 }
 
 .card-img-top {
   width: 100%;
   height: 15vw;
   object-fit: cover;
-}
-
-.card-body {
-  min-height: 20vw;
 }
