--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,58 @@
-.App {
-  text-align: center;
+body {
+  padding-top: 5rem;
+  background-color: #fef6e4;
 }
 
-body {
-  padding-top: 4rem;
+.font-nav-brand {
+  font-family: 'Bentham', serif;
+  font-size: 200%;
+}
+
+.font-nav-link {
+  font-family: 'Bentham', serif;
+  font-size: 150%;
+}
+
+.nav-background {
+  background-color: #f3d2c1;
 }
 
 .card-img-top {
   width: 100%;
-  height: 15vw;
+  height: 18vw;
   object-fit: cover;
 }
 
-.font-nav {
-  font-family: 'Bentham', serif;
-  font-size: 135%;
+@media only screen and (max-width: 600px) {
+  .card-img-top {
+    height: 45vw;
+  }
 }
 
 .font-card {
   font-family: 'Fira Sans', sans-serif;
+  color: #fef6e4;
+  font-weight: bold;
+}
+
+.card-background {
+  background-color: #001858;
+}
+
+.footer-color {
+  background-color: #fef6e4;
+}
+
+.link-color {
+  color: #001858;
+}
+
+.font-loading {
+  font-family: 'Bentham', serif;
+  color: #001858;
+}
+
+.font-error {
+  font-family: 'Bentham', serif;
+  color: #001858;
 }
