--- a/src/App.css
+++ b/src/App.css
@@ -56,3 +56,15 @@ body {
   font-family: 'Bentham', serif;
   color: #001858;
 }
+
+.scroll-to-top {
+  position: fixed; 
+   width: 100%;
+   left: 50%;
+   bottom: 40px;
+   height: 20px;
+   font-size: 3rem;
+   z-index: 1;
+   cursor: pointer;
+   color: green;
+}
